updated opf with annotation transfer

--- a/8f353dbecd1044d6856b750fc5a6aa8c.opf/meta.yml
+++ b/8f353dbecd1044d6856b750fc5a6aa8c.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     63cf6fd7e57c43dda81b37ae3b0333b6:
       base_file: v024.txt
       image_group_id: I1PD95869
-      title: ''
+      title: གཤིན་རྗེ་གཤེད་རྣམ་པར་སྣང་མཛད་ཀྱི་མངོན་པར་རྟོགས་པ།
       total_pages: 1586
       volume_number: 24
