--- a/D6F4C2FFC.opf/index.yml
+++ b/D6F4C2FFC.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   fbc1bfc75e5349dba7af4bfb0b822278:
     parts: {}
+    work_id: D1937
     span:
-    - vol: 24
+    - base: '1443'
       start: 1
       end: 2746
-    work_id: D1937
